--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -59,7 +59,12 @@ footer {
 }
 .title {
 	color: @white;
-	text-shadow: 0px 1px 0px rgba(0,0,0,0.2);
+	//text-shadow: 0px 1px 0px rgba(0,0,0,0.2);
+}
+
+.subtitle {
+	color: rgba(255,255,255,0.6);
+	text-shadow: 0px -1px 0px rgba(0,0,0,0.3);
 }
 
 article {
@@ -258,8 +263,8 @@ section.aside {
 	}
 
 	&.default {
-    	background: #5a5a5a;
-    	&:active, &.active { background: #4b4b4b; }
+    	background: #2c4579;
+    	&:active, &.active { background: #213761;}
 	}
 }
 /* @end */
