New header navigation

--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -83,14 +83,14 @@ header, footer  {
 
 header  {
 	top: 0px;
-	& .onleft { margin-left: 4px !important;}
-	& .onright {margin-right: 4px !important;}
+	/*& .onleft { margin-left: 4px !important;}
+	& .onright {margin-right: 4px !important;}*/
 }
 
 footer  { bottom: 0px; }
 
 header .title, footer .title  {
-	margin: 0 4px;	
+	//margin: 0 4px;	
 	z-index: -1;
 	font-size: 15px;
 	font-weight: bold;
@@ -103,32 +103,15 @@ header .title, footer .title  {
 		text-align: center;
 		display: inline-block;
 	}
-}
-
-.with-subtitle {
-	line-height: 20px;
-	padding-top: 4px;
+	&.with-subtitle {
+		line-height: 20px;
+		padding-top: 4px;
+	}
 }
 
 .subtitle {
 	display:block;
 	font-size: 11px;
 	line-height: 11px;
-}
-
-/*.title > .subtitle {
-	//line-height: 21px;
-	font-weight: normal;
-	font-size: 12px;
-	height: 12px;
-	line-height: 12px;
-}*/
-
-section header a.button, section footer a.button  {
-	margin: 5px 1px 0px;
-	/*
-	&:first-of-type { margin-left: 4px; }	
-	&:last-child { margin-right: 4px; }
-	*/
 }
 /* @end */
