--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -16,8 +16,9 @@
 }
 /* @group <header> & <footer> & <article> */
 header {
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  /*border-top-left-radius: 5px;
+	border-top-right-radius: 5px;*/
+
   border-bottom: 1px solid #1a2838;
   background: #2c8bca -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2c8bca), color-stop(100%, #154f93));
   box-shadow: inset 0 1px 0 #64b9e2, inset 0 -1px 0 #2566a4;
@@ -47,12 +48,24 @@ article .title {
 }
 /* @end */
 /* @group <nav> */
-nav a {
-  color: rgba(255, 255, 255, 0.5);
-}
-nav a.current,
-nav a.active {
+header nav a {
   color: #ffffff;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
+}
+header nav:not(.plain) a {
+  box-shadow: 1px 0 0 rgba(255, 255, 255, 0.2), inset -1px 0 0 rgba(0, 0, 0, 0.2);
+}
+header nav:not(.plain) a:active {
+  box-shadow: inset 1px 0 1px rgba(0, 0, 0, 0.1), inset -1px 0 0 rgba(0, 0, 0, 0.1), inset 0 0 42px rgba(0, 0, 0, 0.5);
+}
+header nav:not(.plain).onright a {
+  box-shadow: -1px 0 0 rgba(255, 255, 255, 0.2), inset 1px 0 0 rgba(0, 0, 0, 0.2);
+}
+header nav:not(.plain).onright a:active {
+  box-shadow: inset 1px 0 1px rgba(0, 0, 0, 0.1), inset -1px 0 0 rgba(0, 0, 0, 0.1), inset 0 0 42px rgba(0, 0, 0, 0.5);
+}
+header nav.plain a:active {
+  text-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
 }
 .toolbar a {
   color: #cdd9e3;
