--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -36,8 +36,8 @@
 
 /* @group <header> & <footer> & <article> */
 header {
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
+	/*border-top-left-radius: 5px;
+	border-top-right-radius: 5px;*/
 	border-bottom: 1px solid #1a2838;
 	
 	background: @background-main;
@@ -77,9 +77,27 @@ article {
 /* @end */
 
 /* @group <nav> */
-nav a {
-	color: rgba(255,255,255,0.5);
-	&.current, &.active {  color: @white; }
+@nav-a-active: inset 1px 0 1px rgba(0,0,0,0.1), inset -1px 0 0 rgba(0,0,0,0.1), inset 0 0 42px rgba(0,0,0,0.5);
+header nav {
+	
+	& a {
+		color: @white;
+		text-shadow: 0 1px 0 rgba(0,0,0,0.3);
+	}
+	
+	&:not(.plain) {
+		& a {
+			box-shadow: 1px 0 0 rgba(255,255,255,0.2), inset -1px 0 0 rgba(0,0,0,0.2);
+			&:active { box-shadow: @nav-a-active; }
+		}
+			
+		&.onright a {
+			box-shadow: -1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2);
+			&:active { box-shadow: @nav-a-active }
+		}
+	}
+		
+	&.plain a:active { text-shadow: 0 0 4px rgba(255,255,255,0.5); }
 }
 
 .toolbar a {
