--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -46,6 +46,16 @@ header {
 	
 	position: absolute;
 	z-index: 2;
+	
+	& .title {
+		color: @white;
+		text-shadow: 0px 1px 0px rgba(0,0,0,0.2);
+	}
+
+	& .subtitle {
+		color: rgba(255,255,255,0.6);
+		text-shadow: 0px -1px 0px rgba(0,0,0,0.3);
+	}
 }
 
 footer {
@@ -57,15 +67,8 @@ footer {
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
 }
-.title {
-	color: @white;
-	//text-shadow: 0px 1px 0px rgba(0,0,0,0.2);
-}
 
-.subtitle {
-	color: rgba(255,255,255,0.6);
-	text-shadow: 0px -1px 0px rgba(0,0,0,0.3);
-}
+
 
 article {
 	background-color: #EBEBEB;
@@ -77,7 +80,6 @@ article {
 /* @end */
 
 /* @group <nav> */
-@nav-a-active: inset 1px 0 1px rgba(0,0,0,0.1), inset -1px 0 0 rgba(0,0,0,0.1), inset 0 0 42px rgba(0,0,0,0.5);
 header nav {
 	
 	& a {
@@ -86,15 +88,10 @@ header nav {
 	}
 	
 	&:not(.plain) {
-		& a {
-			box-shadow: 1px 0 0 rgba(255,255,255,0.2), inset -1px 0 0 rgba(0,0,0,0.2);
-			&:active { box-shadow: @nav-a-active; }
-		}
-			
-		&.onright a {
-			box-shadow: -1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2);
-			&:active { box-shadow: @nav-a-active }
-		}
+		& a { box-shadow: 1px 0 0 rgba(255,255,255,0.2), inset -1px 0 0 rgba(0,0,0,0.2); }
+		&.onright a { box-shadow: -1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2); }
+		
+		& a:active { box-shadow: inset 1px 0 1px rgba(0,0,0,0.1), inset -1px 0 0 rgba(0,0,0,0.1), inset 0 0 42px rgba(0,0,0,0.5); }
 	}
 		
 	&.plain a:active { text-shadow: 0 0 4px rgba(255,255,255,0.5); }
@@ -109,7 +106,6 @@ header nav {
 		background: #111;
 		box-shadow: inset 0 1px 1px rgba(0,0,0,1), -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
 	}
-	
 }
 
 
