--- a/src/stylesheets/less/Lungo.layout.aside.less
+++ b/src/stylesheets/less/Lungo.layout.aside.less
@@ -34,23 +34,25 @@ aside {
 
 	width: @aside-width;
 	max-width: @aside-width;
+	
 
 	&.onright { right: 0px; }
 	&.current { visibility: visible;}
 
 	& .title {
-    	line-height: 40px;
-	    font-size: 15px;
-	    font-weight: bold;
-		height: 40px;
+    	line-height: 42px;
+		height: 41px;
+		font-size: 15px;
+		font-weight: bold;
 	}
 
 	& a {
     	display: block;
-		width: 244px;
+		//width: 244px;
 		height: 40px;
 
-		font-size: 15px;
+		font-size: 14px;
+    	font-weight: bold;
 		line-height: 40px;
 		overflow: hidden;
 		white-space: nowrap;
