New class "autohide" to data-target="aside"
Hide href when the screen is a tablet screen

--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -110,7 +110,8 @@ aside a {
   border-bottom: 1px inset #222;
   border-top: 1px inset rgba(255, 255, 255, 0.1);
 }
-aside a.current {
+aside a.current,
+aside a .icon {
   color: #ffffff;
 }
 aside a .icon {
