--- a/src/stylesheets/less/Lungo.layout.aside.less
+++ b/src/stylesheets/less/Lungo.layout.aside.less
@@ -10,14 +10,10 @@
 @import "constants.less";
 @import "mixins.less";
 
-@defaultTrasition : @easeOutSine;
-@header_footer_height: 40px;
-	@header_extended_height: 74px;
-@footer_toolbar_height: 48px;
-
-/* @group <aside> */
 section.aside {
-	left: @aside-width;
+	&:not(.mini) { left: @aside-width; }
+	&.mini { left: @aside-width-mini; }
+	
 	&.onright {  
 		left: 0px;	
 		.transform(translate(-@aside-width, 0)); 
@@ -34,7 +30,6 @@ aside {
 
 	width: @aside-width;
 	max-width: @aside-width;
-	
 
 	&.onright { right: 0px; }
 	&.current { visibility: visible;}
@@ -45,10 +40,13 @@ aside {
 		font-size: 15px;
 		font-weight: bold;
 	}
-
+	
+	& .title, & .anchor, & a {
+		padding: 0 6px;
+	}
+	
 	& a {
     	display: block;
-		//width: 244px;
 		height: 40px;
 
 		font-size: 14px;
@@ -57,28 +55,16 @@ aside {
 		overflow: hidden;
 		white-space: nowrap;
 		text-overflow: ellipsis;
-
 	}
 
 	& .bubble {
     	float: right;
     	font-size: 11px;
 	}
-}
-
-aside .title, aside a, aside .anchor {
-	padding: 0 6px;
-}
-
-aside a .bubble, aside .title .bubble {
-	margin-top: 13px;
-}
-
-aside .anchor .bubble {
-    margin-top: 2px;
-}
-
-	aside .icon {
+	& *.not(.anchor) .bubble { margin-top: 13px; }	
+	& *.anchor .bubble { margin-top: 2px; }
+	
+	& .icon {
 		width: 24px;
 		float: left;
 		margin: 8px 4px 0 0;
@@ -87,23 +73,43 @@ aside .anchor .bubble {
 		line-height: 24px;
 	    text-align: center;
 	}
-	aside .anchor {
+	
+	& .anchor {
 		font-weight: bold;
 		line-height: 19px;
 	}
-
-	@media handheld, only screen and (min-width: 768px) {
-		.autohide[data-target="aside"] { 
-			display: none !important; 
+		
+	&.mini {
+		width: @aside-width-mini;
+		
+		& a {
+			padding: 0 8px;
+			height: @aside-width-mini;
 		}
-
-		section.aside {
-			width: auto !important;
-    		left: 256px !important;
-    		right: 0px !important;
-    		.transform(translate3d(0px, 0, 0));
-    		-webkit-transition: none;
-
+		& .icon {
+			height: 48px;
+			width: 48px;
+			font-size: 48px;
+			line-height: 48px;
+			//background: red;
+		}
+		
+		& .bubble {
+			margin-top: -48px;
 		}
 	}
-/* @end */
+}
+
+@media handheld, only screen and (min-width: 768px) {
+	.autohide[data-target="aside"] {  display: none !important; }
+
+	section.aside {
+		width: auto !important;
+    	left: @aside-width;
+   		right: 0px !important;
+   		.transform(translate3d(0px, 0, 0));
+   		-webkit-transition: none;
+   		
+   		&.mini{ left: @aside-width-mini; }
+   	}
+}
