--- a/src/stylesheets/less/Lungo.widgets.less
+++ b/src/stylesheets/less/Lungo.widgets.less
@@ -46,7 +46,7 @@
     line-height: 32px;
 }
 
-.mini {
+.icon.mini {
 	font-size: 20px !important;
     height: 16px !important;
     width: 16px !important;
