--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -68,10 +68,9 @@ footer {
 	//border-bottom-right-radius: 5px;
 }
 
-
-
 article {
 	background-color: #EBEBEB;
+	background: none;
 	& .title {
     	color: #797979;
     	text-shadow: 0px 1px 0px #fff;
