--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -10,11 +10,9 @@
 @import "constants.less";
 @import "mixins.less";
 
-/* @group <section> */
-html {
-    overflow: hidden;
-}
+body {  overflow: hidden; }
 
+/* @group <section> */
 section {
 	position: absolute; /* position: fixed on iOS5 & Android 4 */
 	left:  0px;
@@ -78,7 +76,7 @@ header, footer  {
 	overflow: hidden;	
 }
 
-header  {
+header {
 	top: 0px;
 	
 	& .title {
