--- a/src/stylesheets/less/Lungo.widgets.form.less
+++ b/src/stylesheets/less/Lungo.widgets.form.less
@@ -34,6 +34,31 @@ input:not([type=checkbox]), textarea, select {
 	margin: 0 0 6px;
 }
 
+input:not([type=checkbox]), textarea, select {
+	display: inline-block;
+	padding: 5px 0 5px 5px;
+	width: 97%;
+
+	outline: none;
+	
+	font-size:  15px;
+	line-height: 15px;
+	font-weight: bold;
+	
+	-webkit-appearance: none;
+	-webkit-user-select: text;
+	
+	margin: 0 0 6px;
+}
+
+.big {
+	width: 99%;
+	height: 190px;
+	.border-radius(0px);
+	line-height: 22px;
+	//padding: 0px;
+}
+
 /* @group search */
 input[type=search] {
 	width: 86%;
