--- a/src/stylesheets/css/Lungo.widgets.css
+++ b/src/stylesheets/css/Lungo.widgets.css
@@ -1,1 +1,13 @@
-.scrollable{position:absolute;display:block}.scroll{overflow:scroll;-webkit-overflow-scrolling:touch}.onleft{float:left}.onright{float:right}.indented>*{padding:10px}.margin-top-4{margin-top:4px}.hidden{display:none}.semi-opacity{opacity:.5}.size32{font-size:32px;height:32px;width:32px;line-height:32px}.icon.mini{font-size:20px!important;height:16px!important;width:16px!important;line-height:16px!important}.framed{border:2px solid #fff}.round{-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;-webkit-background-clip:padding-box;-moz-background-clip:padding;background-clip:padding-box;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;-webkit-background-clip:padding-box;-moz-background-clip:padding;background-clip:padding-box}.bubble{padding:2px 3px 1px;-webkit-border-radius:1px;-moz-border-radius:1px;border-radius:1px;-webkit-background-clip:padding-box;-moz-background-clip:padding;background-clip:padding-box;-webkit-border-radius:1px;-moz-border-radius:1px;border-radius:1px;-webkit-background-clip:padding-box;-moz-background-clip:padding;background-clip:padding-box;font-size:.8em;font-weight:bold;line-height:1.0em}
+.scrollable{position:absolute;display:block;}
+.scroll{overflow:scroll;-webkit-overflow-scrolling:touch;}
+.onleft{float:left;}
+.onright{float:right;}
+.indented>*{padding:10px;}
+.margin-top-4{margin-top:4px;}
+.hidden{display:none;}
+.semi-opacity{opacity:0.5;}
+.size32{font-size:32px;height:32px;width:32px;line-height:32px;}
+.icon.mini{font-size:20px !important;height:16px !important;width:16px !important;line-height:16px !important;}
+.framed{border:2px solid #fff;}
+.round{-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;-webkit-background-clip:padding-box;-moz-background-clip:padding;background-clip:padding-box;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;-webkit-background-clip:padding-box;-moz-background-clip:padding;background-clip:padding-box;}
+.bubble{padding:2px 3px 1px;-webkit-border-radius:1px;-moz-border-radius:1px;border-radius:1px;-webkit-background-clip:padding-box;-moz-background-clip:padding;background-clip:padding-box;-webkit-border-radius:1px;-moz-border-radius:1px;border-radius:1px;-webkit-background-clip:padding-box;-moz-background-clip:padding;background-clip:padding-box;font-size:0.8em;font-weight:bold;line-height:1.0em;}
