--- a/src/stylesheets/Lungo.layout.aside.less
+++ b/src/stylesheets/Lungo.layout.aside.less
@@ -11,12 +11,12 @@
 @import "mixins.less";
 
 section.aside {
-    &:not(.mini) { .transform(translate(@aside-width, 0)); }
-    &.mini { .transform(translate(@aside-width-mini, 0)); }
+    &:not(.small) { .transform(translate(@aside-width, 0)); }
+    &.small { .transform(translate(@aside-width-small, 0)); }
 
     &.onright {
         .transform(translate(-@aside-width, 0));
-        &.mini { .transform(translate(-@aside-width-mini, 0)); }
+        &.small { .transform(translate(-@aside-width-small, 0)); }
     }
 }
 
@@ -48,9 +48,7 @@ aside {
     & a {
         display: block;
         height: 40px;
-
         font-size: 14px;
-        //font-weight: bold;
         line-height: 40px;
         overflow: hidden;
         white-space: nowrap;
@@ -59,7 +57,7 @@ aside {
 
     & .bubble {
         float: right;
-        font-size: 11px;
+        padding-bottom: 0px;
     }
     & *.not(.anchor) .bubble { margin-top: 13px; }
     & *.anchor .bubble { margin-top: 2px; }
@@ -79,12 +77,12 @@ aside {
         line-height: 19px;
     }
 
-    &.mini {
-        width: @aside-width-mini;
+    &.small {
+        width: @aside-width-small;
 
         & a {
             padding: 0 8px;
-            height: @aside-width-mini;
+            height: @aside-width-small;
         }
         & .icon {
             height: 48px;
@@ -110,6 +108,6 @@ aside {
         .transform(translate3d(0px, 0, 0));
         -webkit-transition: none;
 
-        &.mini{ left: @aside-width-mini; }
+        &.small{ left: @aside-width-small; }
     }
 }
