--- a/src/stylesheets/Lungo.widgets.less
+++ b/src/stylesheets/Lungo.widgets.less
@@ -10,61 +10,38 @@
 @import "constants.less";
 @import "mixins.less";
 
-/* @group scroll */
-
 .scrollable {
-  position: absolute;
-  display: block;
+    position: absolute;
+    display: block;
 }
 
 .scroll {
     overflow: scroll;
     -webkit-overflow-scrolling: touch;
 }
-/* @end */
 
-/* @group .position */
 .onleft { float: left; }
-
 .onright { float: right;}
-
+.hidden { display: none; }
 .indented > * { padding: 10px; }
 
-.margin-top-4{ margin-top: 4px; }
-/* @end */
 
-/* @group .visibility */
-.hidden { display: none; }
-.semi-opacity{ opacity: 0.5; }
-/* @end */
-
-/* @group .sizing */
-.size32 {
-  font-size: 32px;
-    height: 32px;
-    width: 32px;
-    line-height: 32px;
-}
-
-.icon.mini {
-  font-size: 20px !important;
+.icon.small {
+    font-size: 20px !important;
     height: 16px !important;
     width: 16px !important;
     line-height: 16px !important;
 }
-/* @end */
+
 
 .framed { border: 2px solid #fff;}
 
 .round { .border-radius(4px); }
 
-/* @end */
-
 .bubble {
-  padding: 2px 3px 1px;
-  .border-radius(1px);
-  font-size: 0.8em;
-  font-weight: bold;
-  line-height: 1.0em;
+    padding: 1px 3px 1px 3px;
+    height: 14px;
+    font-size: 10px;
+    font-weight: bold;
+    line-height: 14px;
 }
-
