--- a/src/stylesheets/constants.less
+++ b/src/stylesheets/constants.less
@@ -1,69 +1,48 @@
 @import "mixins.less";
 
-/* @group DIMENSIONS */
-
+/* DIMENSIONS */
 @header-height: 42px;
-@with-labels-height: 51px;
+    @header_extended_height: 74px;
+@header_footer_height: 40px;
+@footer_toolbar_height: 48px;
+    @with-labels-height: 51px;
 @article-bottom: 41px;
     @article-bottom-with-labels: 52px;
 
 @border-radius: 3px;
 
 @aside-width: 256px;
-    @aside-width-mini: 64px;
-
-/* @end */
+    @aside-width-small: 64px;
 
 @defaultTrasition : @easeOutSine;
 
-@header_footer_height: 40px;
-    @header_extended_height: 74px;
-@footer_toolbar_height: 48px;
-
-
-/* @group COLORS */
-
+/* COLORS */
 @white:             #fff;
 @black:             #000;
-@black-active:      #000;
-
+    @black-active:      #000;
 @grey:              #ccc;
-@grey-active:       #b5b5b5;
-
+    @grey-active:       #b5b5b5;
 @red:               #e33100;
-@red-active:        #c5280f;
-
+    @red-active:        #c5280f;
 @lightgreen:        #91bd09;
-@lightgreen-active: #7ea41a;
-
+    @lightgreen-active: #7ea41a;
 @green:             #009600;
-@green-active:      #00770e;
-
+    @green-active:      #00770e;
 @blue:              #237fd7;
-@blue-active:       #1a69b6;
-
+    @blue-active:       #1a69b6;
 @arcticblue:        #2daebf;
-@arcticblue-active: #238e9e;
-
+    @arcticblue-active: #238e9e;
 @orange:            #ff5c00;
-@orange-active:     #da4e15;
-
+    @orange-active:     #da4e15;
 @purple:            #7b658d;
-@purple-active:     #574765;
-
+    @purple-active:     #574765;
 @magenta:           #a9014b;
-@magenta-active:    #831239;
-
+    @magenta-active:    #831239;
 @pink:              #ff007f;
-@pink-active:       #de2870;
-
+    @pink-active:       #de2870;
 @yellow:            #ffb515;
-@yellow-active:     #dfa020;
-
+    @yellow-active:     #dfa020;
 @twitter:           #35cdff;
-@twitter-active:    #2bafda;
-
+    @twitter-active:    #2bafda;
 @facebook:          #3b5998;
-@facebook-active:   #2c4579;
-
-/* @end */
+    @facebook-active:   #2c4579;
