--- a/src/stylesheets/Lungo.base.less
+++ b/src/stylesheets/Lungo.base.less
@@ -82,14 +82,10 @@ video {
     font-size: 100%;
 }
 
-a {
-    text-decoration: none;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-}
-
-a:hover {
-    opacity: 1;
-}
+article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
+audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
+audio:not([controls]) { display: none; }
+[hidden] { display: none; }
 
 html {
     height: 100%;
@@ -115,6 +111,16 @@ body {
     -webkit-box-orient: vertical;
     -webkit-box-align: stretch;
 }
+
+a {
+    text-decoration: none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+a:hover {
+    opacity: 1;
+}
+
 
 b,
 strong {
