--- a/src/stylesheets/Lungo.layout.less
+++ b/src/stylesheets/Lungo.layout.less
@@ -15,7 +15,8 @@ body {
 }
 
 section {
-    position: absolute; /* position: fixed on iOS5 & Android 4 */
+    //position: absolute; /* position: fixed on iOS5 & Android 4 */
+    position: fixed;
     left:  0px;
     top:  0px;
     width: 100%;
@@ -65,6 +66,7 @@ section {
 
 header, footer  {
     position: absolute;
+    //position: fixed;
     left: 0px;
     width: 100%;
     height: @header-height;
