No position attribute for .scrollable class

--- a/src/stylesheets/css/Lungo.widgets.css
+++ b/src/stylesheets/css/Lungo.widgets.css
@@ -1,4 +1,4 @@
-.scrollable{position:absolute;display:block;}
+.scrollable{display:block;}
 .scroll{overflow:scroll;-webkit-overflow-scrolling:touch;}
 .onleft{float:left;}
 .onright{float:right;}
