Changes on theme

--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -234,15 +234,15 @@ section.aside {
 }
 
 &.indented {
-        & ul { .border-radius(5px); }
-        & li {
-            &:first-child { .border-radius(5px 5px 0px 0px); }
-            &:last-child {
-                .border-radius(0px 0px 5px 5px);
-                .box-shadow(~"0 1px 0 rgba(0,0,0,0.05)");
-            }
+    & ul { .border-radius(3px); }
+    & li {
+        &:first-child { .border-radius(3px 3px 0px 0px); }
+        &:last-child {
+            .border-radius(0px 0px 3px 3px);
+            .box-shadow(0 1px 1px rgba(0,0,0,0.05));
         }
     }
+}
 
 
 /* @group .button */
